--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    background-image: url(/assets/hamish-weir-cuO6_mnbgPE-unsplash\ \(1\).jpg);
+    background-image: url(/assets/bg-img.jpg);
     
 }
 
@@ -17,6 +17,7 @@ body{
     left: 50%;
     transform: translate(-50%, -50%);
     width: 325px;
+    background-color: #202020;
 }
 
 .screen{
@@ -59,6 +60,9 @@ button:active{
     grid-area: 2 / 4 / 6/ 5;
 }
 
+.equal-sign:hover{
+    background-color: rgba(78, 159, 212, 0.4);
+}
 
 
 .keys{
